uploading finished draft!

--- a/Kubinec Owen 2018 Islamist-Secularist Polarization Draft III.tex
+++ b/Kubinec Owen 2018 Islamist-Secularist Polarization Draft III.tex
@@ -250,9 +250,9 @@ As this model has not been previously estimated in the literature, we also perfo
 
 \section*{Model Results}
 
-Estimating this model using full Bayesian inference would be computationally prohibitive given the size of the data. To address this big data issue, we employ variational Bayesian inference in which we estimate an approximation to the true posterior by minimizing the Kullback-Leibler divergence between the true posterior and a Normal approximation using the Stan estimation engine \parencite{NIPS2015_5758}. Any additional error created by the use of an approximation is a minimal concern given the size of the data and the asymptotic properties of minimizing KL divergence \parencite{grimmer2011,NIPS2015_5758}. Our variational estimation produced 18,123 each of discrimination $\delta_j$ for all of the citizens in the model, but we will focus on the four group parameters that varied over time $\alpha_{cgt}$, one for each country-ideological pairing: Tunisian secularists, Egyptian secularists, Tunisian Islamists, and Tunisian secularists, as they are our primary focus for inference.
+Estimating this model using full Bayesian inference would be computationally prohibitive given the size of the data. To address this big data issue, we employ variational Bayesian inference in which we estimate an approximation to the true posterior by minimizing the Kullback-Leibler divergence between the true posterior and a Normal mixture approximation using the Stan estimation engine \parencite{NIPS2015_5758}. Any additional error created by the use of an approximation is a minimal concern given the size of the data and the asymptotic properties of minimizing KL divergence \parencite{grimmer2011,NIPS2015_5758}. Our variational estimation produced latent parameters for all 18,123 of the citizens in the model, but we instead focus on the four group parameters that varied over time, $\alpha_{cgt}$, one for each country-ideological pairing: Tunisian secularists, Egyptian secularists, Tunisian Islamists, and Tunisian secularists, as they are our primary focus for inference.
 
-We first present a plot showing the estimated ideal points for the four ideological groups along with a vertical line showing when the military coup against Mohammed Morsi occurred. The confidence intervals on the chart reflects the 10\%-90\% density region of the approximated posterior, hereafter referred to as the high-posterior density (HPD) interval. From this chart we can make useful descriptive inferences. First, it is clear that in terms of latent inter-group distance, the Islamists are much closer to each other than are the secularists in either country. Substantively, this finding means that Islamist Twitter users share much more in terms of the ideological nature of their retweet patterns relative to secularists. Again, these latent estimates do not necessarily measure the content of beliefs, but rather the relative salience of these ideological divides and the way that these divides manifest themselves on Twitter. Secularists in both countries are farther apart in our latent space because citizens' tweet patterns would not indicate much ideological salience across the groups' networks. 
+We first present a plot showing the estimated ideal points for the four ideological groups along with a vertical line showing when the military coup against Mohammed Morsi occurred. The confidence intervals on the chart reflects the 10\%-90\% density region of the approximated posterior, hereafter referred to as the high-posterior density (HPD) interval. From this chart we can make useful descriptive inferences. First, it is clear that in terms of latent inter-group distance, the Islamists are much closer to each other than are the secularists in either country. Substantively, this finding means that Islamist Twitter users share much more in terms of the sectarian nature of their retweet patterns relative to secularists. Again, these latent estimates do not necessarily measure the content of beliefs, but rather the relative salience of these ideological divides and the way that these divides manifest themselves on Twitter. Secularists in both countries are farther apart in our latent space because citizens' tweet patterns would not indicate much ideological salience across the groups' networks. 
  \begin{figure}[!h]
  	\centering
 	\caption{Estimated Ideal Point Locations for Transnational Ideological Groups}\label{arab_id_facet}
@@ -264,7 +264,7 @@ In addition, Figure \ref{arab_id_facet} reveals that other events seemed to have
 
 Other events are also noticeable from the plot, including the assassination of Mohammed Brahmi, a secularist politician, allegedly by Islamist radicals in July of 2013. We also see a noticeable spike in the Egyptian Islamists ideal points during the time of the Rabaa massacre, when the Egyptian military violently suppressed a sit-in by Muslim Brotherhood members opposing the coup against Muhammed Morsi. Given that these spikes in ideal points conform closely to events that we can identify as polarizing, but which we did not necessarily  identify in advance (especially Tunisia's draft constitution), the estimated latent dimension appears to correspond closely to our label of ``inter-group distance" as a measure of ideological polarization.
 
- To see the relationships better, we show these trend lines without HPD intervals and overlapping country/ideological groups in Figures \ref{arab_id_facet} and \ref{country_facet}. While it can be difficult to spot patterns in time series with the naked eye, it is very clear that Islamists track with each other much more than secularists do in general, and that Tunisians tended to mirror each other more closely than Egyptians. Furthermore, while the opposing groups within countries are on average the same distance apart, Egyptian secularists and Islamists are farther apart on average than their Tunisian counterparts. To discern more clearly whether inter-group distance is greater in one country, Figure \ref{diffindiff} shows the difference of the within-country inter-group differences in ideal point locations between Egypt and Tunisia. During the Tunisian constitutional crisis, within-country polarization (i.e., difference in ideal point locations) in Tunisia was significantly greater than Egypt's, but after Morsi's coup, Egypt's within-country polarization remained consistently higher than Tunisia's until the end of 2013.
+ To see the relationships better, we show these time-varying ideal points without HPD intervals and overlapping country/ideological groups in Figures \ref{arab_id_facet} and \ref{country_facet}. While it can be difficult to spot patterns in time series with the naked eye, it is very clear that Islamists track with each other much more than secularists do in general, and that Tunisians tended to mirror each other more closely than Egyptians. Furthermore, while the opposing groups within countries are on average the same distance apart, Egyptian secularists and Islamists are farther apart on average than their Tunisian counterparts. To discern more clearly whether inter-group distance is greater in one country, Figure \ref{diffindiff} shows the difference of the within-country inter-group differences in ideal point locations between Egypt and Tunisia. During the Tunisian constitutional crisis, within-country polarization (i.e., difference in ideal point locations) in Tunisia was significantly greater than Egypt's, but after Morsi's coup, Egypt's within-country polarization remained consistently higher than Tunisia's until the end of 2013.
  \begin{figure}[!h]
  	\centering
 	\caption{Estimated Ideal Point Locations by Religion}\label{religion_facet}
@@ -286,7 +286,7 @@ Other events are also noticeable from the plot, including the assassination of M
 
 
 
-Next we present the parameters from the VAR component of the model in Figure \ref{varparam}. This plot of the posterior densities of the adjustment parameters $\beta_{cgIN}$ and $\beta_{cgOUT}$ provides a precise definition of how ideological groups react to each other and to their own prior history. First, $\beta_{cgIN}$ captures how strongly the ideological group is influenced by its recent past as opposed to its long-run value. In other words, a higher value of  $\beta_{cgIN}$ implies that the ideological group is relatively unstable and likely to drift in an uncertain direction, whereas a lower value of $\beta_{cgIN}$ means that the ideological group remains fixed around its long-term inter-group distance and, although it will respond to shocks, its position in the system is relatively fixed. What is of interest with these parameters is that they are considerably higher for Tunisian groups than for Egyptian groups. Tunisian secularists have a value of $\beta_{cgIN}$ equal to 1, which is very high and means that secularists do not appear to have a long-run mean to which they will return.\footnote{In other words, the series appears to be partially integrated of order 1.} Tunisian Islamists have a lower value, but still quite high at above 0.8, implying that it will take a long time after some shock for the Islamists to return to their own long-term average. By comparison, secularists and Islamists' positions in Egypt are relatively fixed, one could even say entrenched, with varying salience but relatively clear lines.
+Next we present the parameters from the VAR component of the model in Figure \ref{varparam}. This plot of the posterior densities of the adjustment parameters $\beta_{cgIN}$ and $\beta_{cgOUT}$ provides a precise definition of how ideological groups react to each other and to their own prior history. First, $\beta_{cgIN}$ captures how strongly the ideological group is influenced by its recent past as opposed to its long-run value. In other words, a higher value of  $\beta_{cgIN}$ implies that the ideological group is relatively unstable and likely to drift in an uncertain direction, whereas a lower value of $\beta_{cgIN}$ means that the ideological group remains fixed around its long-term inter-group distance and, although it will respond to shocks, its position in the system is relatively fixed. What is of interest with these parameters is that the $\beta_{cgIN}$ parameters are much higher for secularists than for Islamists. Tunisian secularists have a value that is greater than 0.5, which reflects the random-walk nature of the time series seen in Figure \ref{arab_id_facet}. What these parameter values imply is that secularists tend to less fixed in their relative position within the system, and a shock to their ideal point values will last much longer. By comparison, Islamists are fixed around their long-term mean; while they will certainly respond to shocks there is little long-term movement away from their central location in this latent space. Substantively, one could say that the Islamists have a much more coherently formed movement than the secularists.
  \begin{figure}[!h]
 	\centering
 	\caption{Estimated Adjustment Parameters $\beta_{cgIN}$ and $\beta_{cgOUT}$ from IRT-VAR Model}\label{varparam}
@@ -300,13 +300,11 @@ Next we present the parameters from the VAR component of the model in Figure \re
 	\includegraphics[width=.9\linewidth]{betax}
 \end{figure}
 
-The values of the $\beta_{cgOUT}$ allow us to make statements about how each group is influenced by its foreign ideological allies. Of these parameters, Egyptian Islamists have the highest value, while Tunisian secularists by contrast have the lowest (although the posterior density includes a wide range of possible values). Egyptian secularists and Tunisian Islamists have $\beta_{cgOUT}$ values that show they are influenced by foreign allies, but not to as great an extent as Egyptian Islamists. Again, the most peculiar behavior appears for Tunisian secularists, who exhibit high instability in their position in the system, but also do not appear to be influenced to a great extent by their ideological allies (although the model does not rule out that possibility). In general, as well, it is clear that Islamists are influenced to a greater extent by foreign allies than are secularists.
+The values of the $\beta_{cgOUT}$, on the other hand, allow us to make statements about how each group is influenced by its foreign ideological allies. Of these parameters, Egyptian Islamists and Tunisian secularists have the highest absolute value. Egyptian secularists, on the other hand, have a rather small though very precisely estimated influence from Tunisian secularists. In general, it is clear that Islamists are influenced to a greater extent by foreign allies than are secularists.
 
-Figure \ref{betax} shows the posterior densities for our $\beta_{cgx}$ parameter that measures the total effect of Morsi's coup on each of the time series. As can be seen, these values are uniformly positive and statistically distinguishable from zero. Unsurprisingly, the effect on Egyptian Islamists is three times larger than for other groups. To interpret these values correctly, the relative position of each ideological group in Figure \ref{arab_id_facet} must be kept in mind. Because Egyptian secularist are further down the scale than Egyptian Islamists, the positive values imply that 1) Egyptian Islamists moved away from Egyptian secularists after the coup and that 2) to a much lesser extent, Egyptian secularists also moved towards Islamists. Interestingly, the opposite logic holds for Tunisia: the coup caused Tunisian Islamists to move closer to the position of secularists, while secularists moved farther away, although substantively these movements are much smaller. 
+In addition to these diagnostic parameters, we can also look at direct measures of polarizing events. Figure \ref{betax} shows the posterior densities for our $\beta_{cgx}$ parameter that measures the total effect of Morsi's coup on each of the time series. As can be seen, these values are uniformly positive and statistically distinguishable from zero. Unsurprisingly, the effect on Egyptian Islamists is significantly larger than for other groups. To interpret these values correctly, the relative position of each ideological group in Figure \ref{arab_id_facet} must be kept in mind. Because Egyptian secularist are further down the scale than Egyptian Islamists, the positive values imply that 1) Egyptian Islamists moved away from Egyptian secularists after the coup and that 2) to a much lesser extent, Tunisian Islamists shifted away from Egyptian Islamists. Interestingly, the coup pushed Tunisian secularists closer to their ideological allies in Egypt, while the coup did not appear to have any direct effect on Egyptian secularists. 
 
-While these interpretations are substantively interesting, the value of $\beta_{cgx}$ alone cannot answer the questions posed by our hypotheses because these static values do not capture feedback effects or time auto-correlation. To test our hypotheses precisely, we calculate the impulse-response functions (IRFs) mentioned previously to test the hypotheses in Table \ref{Htests}. First, we examine H1 in Figure \ref{cross_irf}, which involves testing a basic null hypothesis that we should be able to detect some kind of response in one ideological group from a unit shock to their foreign ideological allies. While this shock is substantively quite large, using a 1-unit shock is convenient as we can then interpret the y axis as representing the proportion of the shock that transfered from one country to another. As can be seen in Figure \ref{cross_irf}, a one-unit shock in a foreign ideological ally does result in movement in each group. Egyptian Islamists show the greatest responsiveness, with more than 30\% of the shock transferring across borders in the initial day after the shock, although the shock decays quickly as Egyptian Islamists revert to their long-term average value. Tunisian Islamists also react to Egyptian Islamists, although the substantive size of the IRF is much smaller.
-
-For secularists, the picture is less clear. Unsurprisingly, movement in Egypt secularists does not translate into any statistically identifiable effect on Tunisian secularists. The opposite relationship is more difficult to describe because of the fact that the Tunisian secularists are so unstable. Instead of decaying, any shock from the Tunisian secularists accumulates over time among the Egyptian secularists. This peculiar behavior indicates that even small shocks to the system can result in long-term equilibrium changes if there is transnational feedback and unstable ideological positions. Overall, this evidence supports H1, with the caveat that we could not identify clear transnational influence on Tunisian secularists.
+While these interpretations are substantively interesting, the value of $\beta_{cgx}$ alone cannot answer the questions posed by our hypotheses because these static values do not capture feedback effects or time auto-correlation. To test our hypotheses precisely, we calculate the impulse-response functions (IRFs) mentioned previously to test the hypotheses in Table \ref{Htests}. First, we examine H1 in Figure \ref{cross_irf}, which involves testing a basic null hypothesis that we should be able to detect some kind of response in one ideological group from a unit shock to their foreign ideological allies. While this shock is substantively quite large, using a 1-unit shock is convenient as we can then interpret the y axis as representing the proportion of the shock that transfered from one country to another. As can be seen in Figure \ref{cross_irf}, a one-unit shock in a foreign ideological ally does result in movement in each group. Tunisian secularists show the greatest responsiveness, with more than 50\% of the shock transferring across borders in the initial day after the shock. Islamists in both countries see substantively large shock transfers between 10 and 20 percent. Secularists in Egypt see the smallest shock transfer at between 1 and 3 percent.
  \begin{figure}[!h]
 	\centering
 	\caption{IRF for 1-Unit Shock from Transnational Ideological Groups}\label{cross_irf}
@@ -314,7 +312,7 @@ For secularists, the picture is less clear. Unsurprisingly, movement in Egypt se
 	\includegraphics[width=.9\linewidth]{irf_egypt_panels}
 \end{figure}
 
-To test hypothesis 2, we can employ the same IRF technique except now we use the estimates for the Morsi coup effect $\beta_{cgx}$ instead of a hypothetical 1-unit shock. In hypothesis 2, we are testing for the direct effect; i.e., whether the coup had a statistically distinguishable effect on each ideological group on itself over time. Figure \ref{within_betax} reveals that this direct effect does generally exist. Substantively, Egyptian Islamists have the largest response in the immediate aftermath of the coup, although the effect decays quickly over time relative to Tunisian Islamists. Once again, the unstable nature of Tunisian secularists means that the effect stays constant over time instead of decaying. 
+To test hypothesis 2, we can employ the same IRF technique except now we use the estimates for the Morsi coup effect $\beta_{cgx}$ instead of a hypothetical 1-unit shock. In hypothesis 2, we are testing for the direct effect; i.e., whether the coup had a statistically distinguishable effect on each ideological group on itself over time. Figure \ref{within_betax} reveals that this direct effect does generally exist. Substantively, all ideological groups have a quick response to the coup, with the exception of secularists in Egypt, who have a relatively precisely estimated null effect. It is interesting again to note that the signs of the effect among Islamists will tend to push them apart in the immediate aftermath of the coup.
  \begin{figure}[!h]
 	\centering
 	\caption{IRF for Within-Time Series Direct Effect of Coup $\beta_{cgx}$}\label{within_betax}
@@ -322,7 +320,7 @@ To test hypothesis 2, we can employ the same IRF technique except now we use the
 	\includegraphics[width=.9\linewidth]{irf_betax_within}
 \end{figure}
 
-Next we test the indirect effect mentioned in hypothesis 3 of the Morsi coup, or the amount with which the shock of the coup transferred to ideological allies, in Figure \ref{indirect_betax}. Unsurprisingly, these effects are substantially smaller than the direct effects in Figure \ref{within_betax}. Interestingly, the indirect effects of Egyptian and Tunisian Islamists are almost identical because the smaller direct effect for Tunisian Islamists counterbalances Egyptian Islamists' greater sensitivity to transnational polarization. Again, we would note the cumulative instead of decaying effect on Egyptian secularists because of the instability in their ideological allies, and the imprecise null effect for Egyptian secularists. Overall, the evidence shows that there are indeed indirect feedback effects of the coup across countries for ideological groups, but especially for Islamists.
+Next we test the indirect effect mentioned in hypothesis 3 of the Morsi coup, or the amount with which the shock of the coup transferred to ideological allies, in Figure \ref{indirect_betax}. Surprisingly, these effects are as large or larger in some cases than the direct effects in Figure \ref{within_betax}. Interestingly, the indirect effects of Egyptian and Tunisian Islamists are almost identical because the smaller direct effect for Tunisian Islamists counterbalances Egyptian Islamists' greater sensitivity to transnational polarization. Again, we would note that the shock decays much more slowly among secularists due to their relatively less stable position in the system. Overall, the evidence shows that there are indeed indirect feedback effects of the coup across countries for ideological groups, but especially for Islamists.
  \begin{figure}[!h]
 	\centering
 	\caption{IRF for Within-Time Series Indirect (Transnational) Effect of Coup $\beta_{cgx}$}\label{indirect_betax}
@@ -342,7 +340,7 @@ Next we test the indirect effect mentioned in hypothesis 3 of the Morsi coup, or
 	\includegraphics[width=.9\linewidth]{irf_betax_compare}
 \end{figure}
 
-Finally, we examine hypothesis 4, which proposes that the combined effect of both the direct and indirect effects of the coup will also be positive. In other words, once cross-border polarization is taken into account, the coup actually has a greater total effect on moving the inter-group distance of ideological groups within countries. This hypothesis could be falsified if the direct and indirect effects counterbalanced each other, but as Figures \ref{combine_betax} and \ref{compare_betax} reveal, the combined effect is indeed greater than either the indirect or direct effect. Figure \ref{combine_betax} shows that the combined effects of the coup look similarly to the direct and indirect effects, except that secularists in both countries show cumulative effects of the coup rather than decaying effects. What is interesting is to then overlay the combined effects on the direct effects, which we do in Figure \ref{compare_betax}. This plot makes the point that for Islamists, the combined feedback effects serve to heighten their movement in the latent space, while for secularists, this is not necessarily so. Secularists in Tunisia are largely indifferent to movement in their foreign ideological allies, while for secularists in Egypt, their co-religionists response to the coup does heighten their own response relative to the direct effect, although the difference is not very precise. In all, it is clear that the combined effects, or both the within-group effect of the coup and the feedback traveling across borders, prompt a higher level of salience and movement in the ideological space that corresponds to our theory of how ideological groups receive and transmit transnational polarization. Or to put it more colloquially, no ideological group is an island.
+Finally, we examine hypothesis 4, which proposes that the combined effect of both the direct and indirect effects of the coup will also be positive. In other words, once cross-border polarization is taken into account, the coup actually has a greater total effect on moving the inter-group distance of ideological groups within countries. This hypothesis could be falsified if the direct and indirect effects counterbalanced each other, but as Figures \ref{combine_betax} and \ref{compare_betax} reveal, the combined effect is indeed greater than either the indirect or direct effect for Islamists, although there is no statistically distinguishable difference for secularists. This difference can be seen by overlaying the combined effects on the direct effects, which we do in Figure \ref{compare_betax}. This plot makes the point that for Islamists, the combined feedback effects serve to increase their movement in the latent space, while for secularists, this is not necessarily so. Secularists in Tunisia are largely indifferent to movement in their foreign ideological allies, while for secularists in Egypt, their co-religionists response to the coup does heighten their own response relative to the direct effect, although the difference is not very precise. In all, it is clear that the combined effects, or both the within-group effect of the coup and the feedback traveling across borders, prompt a higher level of salience and movement in the ideological space that corresponds to our theory of how ideological groups receive and transmit transnational polarization. However, this finding exists only for Islamists, while secularists tend to be relatively unaffected by the polarization of their ideological allies. Secularists still respond to sectarian shocks, but the channels for polarization are not primarily transnational but rather intranational.
 
 
 \section*{Discussion}
@@ -355,11 +353,13 @@ Yet even with those two previous caveats, our findings provide important insight
 
 As a result, the precision of the hypotheses tests we are able to implement in this paper enable us to identify the direct, indirect and combined \emph{transnational} effects of inter-group polarization. Being able to separate these different components of the feedback process allows us to substantiate the major elements of the theory, and to support the central point of our paper that transnational linkages among ideological groups can endogenously heighten polarization independent of what is occurring within that group's country. While we are not the first to document such linkages, we are the first to directly measure this kind of transnational ideological polarization in a way that incorporates our uncertainty in measuring latent social cleavages.
 
-Our analysis also raises questions that we had not considered before. The surprisingly unstable nature of Tunisian secularists shows that when the salience and inter-group distance is very unstable for an ideological group, it can likewise have dramatic and unpredictable effects on ideological allies. While we do not consider our model incorrect--we do still believe that Tunisian secularists have long-term ideological beliefs that were not being revised under the short time period under study--the analysis does reveal that Tunisian secularists, and Tunisian Islamists to a lesser extent, were struggling to reach an equilibrium position. Although we cannot with complete certainty tie these dynamics to observed outcomes in these countries, it is interesting to note that Tunisians were more able to contain sectarian conflict and reach a political compromise in which the Islamist party stepped down for new elections, while sectarian conflict in Egypt resulted in brutal repression of Islamists that continues until today.
+Our analysis also raises questions that we had not considered before. The surprisingly higher instability of secularists' ideal points, measured by the rate at which their time series returned to a long-term mean, indicates that secularists were relatively less entrenched in this latent space in terms of their sectarian identity. Islamists, by contrast, and Egyptians in particular, were much more rigidly defined. It is perhaps not surprising, then, that Islamists also show much higher levels of sensitivity to movement in each other's ideal points relative to secularists.
 
-We would note as well that an area for future research would be to incorporate an explicit second-dimension to ideological polarization, that of the pro and anti-democracy axis, perhaps through the use of compensatory multi-dimensional IRT \parencite{reckase2009}. We believe that this second dimension explains why the changes in the Tunisian constitution provoked a wider swing in inter-group distance than did Morsi's coup. Some secularists in both countries opposed the coup because of their commitment to democratic norms, which arguably reduced polarization or at least made it less likely for these secularists to adopt a more negative view of Islamists as a result of the coup. By comparison, the constitutional changes in Tunisia did not divide secularists along a democratic axis, which more cleanly activated the secularist-Islamist cleavage. This difference between the two events is further validation for our method of identifying the secularist-Islamist cleavage, but future work could examine more closely how cleavages interact with each other. A challenge to accomplish this is to find a way to effectively code pro and anti-democratic views as there is a strong social desirability bias against expressing anti-democratic opinions, even in authoritarian countries.
+We would note as well that this polarization of foreign allies did not always result in additional within-country polarization. Tunisian Islamists and secularists seemed to move closer to each other, at least when looking at their response to Morsi's coup. Although we cannot with complete certainty tie these dynamics to observed outcomes in these countries, it is interesting to note that Tunisians were more able to contain sectarian conflict and reach a political compromise in which the Islamist party stepped down for new elections, while sectarian conflict in Egypt resulted in brutal repression of Islamists that continues until today.
 
 In addition, we believe that the time series estimates may also be affected by de-polarization. In Tunisia, Islamists were under considerable pressure during this time period as they faced rising unrest because of violence from Islamic radicals \parencite{mccarthy2016}. For that reason, post-coup they may have feared supporting their co-religionists too publicly lest they suffer a similar fate within their own country \parencite{grewal2016}. This kind of suppression may explain why Tunisian Islamists tended to move closer to Tunisian secularists in response to the coup and Egyptian Islamists' reaction, while the opposite occurred for Egyptian Islamists. 
+
+We would note as well that an area for future research would be to incorporate an explicit second-dimension to ideological polarization, that of the pro and anti-democracy axis, perhaps through the use of compensatory multi-dimensional IRT \parencite{reckase2009}. We believe that this second dimension explains why the changes in the Tunisian constitution provoked a wider swing in inter-group distance than did Morsi's coup. Some secularists in both countries opposed the coup because of their commitment to democratic norms, which arguably reduced polarization or at least made it less likely for these secularists to adopt a more negative view of Islamists as a result of the coup. By comparison, the constitutional changes in Tunisia did not divide secularists along a democratic axis, which more cleanly activated the secularist-Islamist cleavage. This difference between the two events is further validation for our method of identifying the secularist-Islamist cleavage, but future work could examine more closely how cleavages interact with each other. A challenge to accomplish this is to find a way to effectively code pro and anti-democratic views as there is a strong social desirability bias against expressing anti-democratic opinions, even in authoritarian countries.
 
 One area of our data that we have not explored is the content of the tweets themselves. In fact, our empirical strategy is based in part on avoiding the challenging task of parsing tweets into useful categories. However, our approach to grounding the model in assigned ideological labels and retweets provides an avenue for incorporating text. A major challenge in text analysis is to know how to identify latent variables of interest underlying word counts \parencite{slapin2008,grimmer2013}. By incorporating coded labels and retweets as a relatively direct measure of polarization, text can then be included as an additional source of information about polarization. This approach is similar to the recent efforts to find ways of estimating ideal points for legislators that combine both the text of legislation and legislators' observed votes \parencite{lauderdale2014}. For these reasons, our model does not preclude analysis of text but rather helps provide an estimation framework for sifting through the noise in Twitter content.
 
@@ -367,7 +367,7 @@ One area of our data that we have not explored is the content of the tweets them
 
 In this paper we put forward a method of estimating the latent positions of ideological groups in Egypt and Tunisia during the tumultuous period of the Arab Spring. We take advantage of Twitter's widespread usage to show how latent ideological scores change over time and also in tandem with similar ideological groups in other countries. The use of the IRT-VAR model allows for these estimates to incorporate measurement uncertainty while also providing useful summary measures of inter-group distance.
 
-We find that the overthrow of Mohammed Morsi in a coup by the Egyptian military resulted in a long-term shift of the latent social cleavages of both secularists and Islamists in Egypt. This shock also eventually resulted in both groups moving farther apart from each other in the months ahead. The aftermath of the coup had its greatest effect on shifting the ideal points of Egyptian and Tunisian Islamists, with weaker effects on Egyptian and Tunisian secularists. Furthermore, we find that the combined effect of both the coup on each group with the feedback each group received from its foreign ideological ally resulted in greater movement in ideal points, and hence polarization, relative to each group's individual response to the coup. 
+We find that the overthrow of Mohammed Morsi in a coup by the Egyptian military resulted in a long-term shift of the latent social cleavages of both secularists and Islamists in Egypt. This shock also eventually resulted in both groups moving farther apart from each other in the months ahead. The aftermath of the coup had its greatest effect on shifting the ideal points of Egyptian and Tunisian Islamists, with weaker effects on Egyptian and Tunisian secularists. Furthermore, we find that the combined effect of both the coup on the Islamists along with the feedback each group received from its foreign ideological ally resulted in greater movement in ideal points among Islamists, and hence polarization, but the same did not hold for secularists. 
 
 This research opens the door to further exploration of the determinants and measurement of ideological polarization during periods of political instability. This model provides a rich range of estimates and can pinpoint places at which polarizing events occurred. Furthermore, we can show how short-term shocks translate into long-term differences in idealogical polarization over time. We hope that this evidence stimulates more investigation of the determinants and effects of group feedback effects in ideologically-polarized societies.
 
@@ -439,12 +439,12 @@ What is important to note about the prior distributions is that because the outc
 
 
 \begin{figure}[!h]
-	\caption{Recovery of True Parameter Values}\label{true_pars}
+	\caption{Recovery of True Impulse-Response Function Values}\label{irf_simulation_panels}
 	\centering
-	\includegraphics[width=.9\linewidth]{true_estimated.png}
+	\includegraphics[width=.9\linewidth]{irf_simulation_panels}
 \end{figure}
 
-Finally, Figure \ref{true_pars} shows the performance of the model at recovering the latent time series using Bayesian MCMC estimation within the Stan framework \parencite{carpenter2017}. While the recovery is not perfect, it is able to follow the same path of the generated data. The uncertainty around the latent process will by necessity be larger because the time series themselves are unobserved.
+Finally, Figure \ref{irf_simulation_panels} shows the performance of the model at recovering the core estimand of interest, impulse response functions, from the latent time series using Bayesian MCMC estimation within the Stan framework \parencite{carpenter2017}. To do so we generated data from a simulated model and then estimated a VAR on the simulated ideal point time series. We then compared these ``true" IRFs to the estimated IRFs from a Bayesian fit. While the recovery is not perfect, it is able to follow the same path of the generated data. The uncertainty around the latent process will by necessity be larger because the time series themselves are unobserved.
 
 \printbibliography
 
